--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       display.value += value;
 
       if (display.value === correctPIN) {
-        window.location.href = "http://localhost:8080/index2.html"; // Replace with your URL
+        window.location.href = "https://mrxyynn.github.io/"; // Replace with your URL
       }
 
       if (display.value.length >= correctPIN.length && display.value !== correctPIN) {
